--- a/site/package.json
+++ b/site/package.json
@@ -21,6 +21,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@cometjs/core": "^0.1.0",
     "gatsby": "^2.24.47",
     "gatsby-image": "^2.4.16",
     "gatsby-plugin-manifest": "^2.4.23",
