chore(site) upgrade TypeScript to v4 and enable incremental compilation

--- a/site/tsconfig.json
+++ b/site/tsconfig.json
@@ -8,6 +8,9 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "downlevelIteration": true,
+    "noEmit": true,
+    "composite": true,
+    "incremental": true,
     "jsx": "preserve"
   },
   "include": [
